--- a/app/css/_global.scss
+++ b/app/css/_global.scss
@@ -74,7 +74,6 @@ section{
 }
 
 #mobileMenu.onmenu{
-
 		position: fixed;
 		width: 90%;
 		top: 2em;
@@ -412,6 +411,7 @@ section{
 	position: absolute;
 	top: 2em;
 	left: 20%;
+	z-index:99999;
 	
 	font-size: 2.4em;
 	-webkit-transition: all 0.5s ease-in-out;
@@ -545,7 +545,9 @@ footer #company{
 		top: 0;
 		right: 0;
 		z-index: 1337;
-		background: rgba(0, 0, 0, 0.1);
+		//background: rgba(0, 0, 0, 0.1);
+		background: #4471ab;
+		background: rgba(68, 113, 171, 0.8);
 		color: rgba(255, 255, 255, 0.7);
 		-webkit-transition: all 0.35s ease-in-out;
 		-moz-transition: all 0.35s ease-in-out;
@@ -595,6 +597,10 @@ footer #company{
 		}
 	}
 
+	#topBg{
+		position: relative;
+	}
+
 	#bigBg{
 		display: block !important;
 		 margin-bottom: 5rem;
@@ -602,21 +608,20 @@ footer #company{
 
 
 	.todayHighlights{
-		background-color: rgba(150, 150, 150, 0.8);
-			color: $white;
-		// padding-top: 1em;
-	 //  	padding-bottom: 1em;
-	 //  	padding-left: 1em;
+		background-color: rgba(255, 255, 255,0.6);
+		color: #222;
+		text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
+		
 	  	text-transform: uppercase;
-	  	@include latoRegular;
-	  	ttext-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+	  	@include latoReallyLight;
+	  	
 	  	text-align: left;
 	  	letter-spacing: 0.1214em;  
 
 	  	position: absolute;
-	  	top: 20%;
-	  	left: 20%;
-	  	font-size: 3em;
+	  	right:0%;
+	  	bottom: 0em;
+	  	font-size: 3rem;
 
 	}
 
@@ -650,8 +655,9 @@ footer #company{
 
 	.onoutput{
 	
-		background-color: $slategray;
-		background-color: rgba(119,136,153, 0.5);
+		background-color: #3098af;
+		background-color: rgba(48,152,175, 0.5);
+
 	}
 
 
