--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
   font-size: 1.4rem;
   line-height: 1.3;
   color: black;
-  background-color: #d8e1e5;
+  background-color: #66c4ca;
   font-family: 'Lato-Regular', arial, sans-serif;
   font-weight: 400;
   font-style: normal; }
@@ -250,7 +250,7 @@ h3 {
     padding-top: 0.5em;
     padding-bottom: 0.5em; }
   .box .primaryDetail a {
-    color: #006363;
+    color: #3098af;
     font-family: 'Lato-regular', sans-serif;
     font-weight: 400;
     font-style: italic;
@@ -367,6 +367,7 @@ h3 {
   position: absolute;
   top: 2em;
   left: 20%;
+  z-index: 99999;
   font-size: 2.4em;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -470,7 +471,8 @@ footer #company {
     top: 0;
     right: 0;
     z-index: 1337;
-    background: rgba(0, 0, 0, 0.1);
+    background: #4471ab;
+    background: rgba(68, 113, 171, 0.8);
     color: rgba(255, 255, 255, 0.7);
     -webkit-transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
@@ -507,24 +509,27 @@ footer #company {
     #tiledMenu div:nth-child(1) a {
       border-bottom: 0.15em solid rgba(255, 255, 255, 0.4); }
 
+  #topBg {
+    position: relative; }
+
   #bigBg {
     display: block !important;
     margin-bottom: 5rem; }
 
   .todayHighlights {
-    background-color: rgba(150, 150, 150, 0.8);
-    color: white;
+    background-color: rgba(255, 255, 255, 0.6);
+    color: #222;
+    text-shadow: 1px 1px 1px #969696;
     text-transform: uppercase;
     font-family: 'Lato', sans-serif;
-    font-weight: 400;
+    font-weight: 100;
     font-style: normal;
-    ttext-shadow: 2px 2px 2px #969696;
     text-align: left;
     letter-spacing: 0.1214em;
     position: absolute;
-    top: 20%;
-    left: 20%;
-    font-size: 3em; }
+    right: 0%;
+    bottom: 0em;
+    font-size: 3rem; }
 
   .three-column {
     width: 100%; }
@@ -547,8 +552,8 @@ footer #company {
     transition: opacity 1s ease-in-out; }
 
   .onoutput {
-    background-color: slategrey;
-    background-color: rgba(119, 136, 153, 0.5); } }
+    background-color: #3098af;
+    background-color: rgba(48, 152, 175, 0.5); } }
 /* Helper Classes =============================================================================== */
 .hide {
   display: none !important;
