--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
   font-size: 1.4rem;
   line-height: 1.3;
   color: black;
-  background-color: #66c4ca;
+  background-color: #D8E1E5;
   font-family: 'Lato-Regular', arial, sans-serif;
   font-weight: 400;
   font-style: normal; }
@@ -78,20 +78,6 @@ h3 {
 
 .icon-search {
   float: right; }
-
-.todayHighlights {
-  background-color: #344d60;
-  color: white;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 1em;
-  text-transform: uppercase;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  text-align: left;
-  letter-spacing: 0.1214em;
-  margin: 0 auto; }
 
 #mobileMenu.onmenu {
   position: fixed;
@@ -517,9 +503,8 @@ footer #company {
     margin-bottom: 5rem; }
 
   .todayHighlights {
-    background-color: rgba(255, 255, 255, 0.6);
-    color: #222;
-    text-shadow: 1px 1px 1px #969696;
+    background-color: rgba(0, 0, 0, 0);
+    color: #FFF;
     text-transform: uppercase;
     font-family: 'Lato', sans-serif;
     font-weight: 100;
@@ -527,9 +512,9 @@ footer #company {
     text-align: left;
     letter-spacing: 0.1214em;
     position: absolute;
-    right: 0%;
-    bottom: 0em;
-    font-size: 3rem; }
+    top: 20%;
+    left: 20%;
+    font-size: 3em; }
 
   .three-column {
     width: 100%; }
